--- a/style.css
+++ b/style.css
@@ -33,6 +33,9 @@ nav {
 
 }
 
+nav a:hover {
+    color: gray;
+}
 nav a {
     color: white;
     text-decoration: none;
@@ -90,7 +93,19 @@ nav a {
     font-weight: normal;
 }
 
+.mastheadContainer a {
+    text-decoration: none;
+}
+
+.mastheadContainer a:hover {
+    opacity: .5;
+}
+
 /* Style for the free trial button in the middle of masthead. */
+.freeTrial:hover {
+    opacity: .7;
+}
+
 .freeTrial {
     display: block;   
     margin: auto;
@@ -98,6 +113,7 @@ nav a {
     height: 56px;
     min-width: 136px;
     border: none;
+    outline: none;
     border-radius: 4px;
     cursor: pointer;
     text-transform: uppercase;
@@ -192,6 +208,7 @@ nav a {
     font-weight: 600;
     line-height: 14px;
     letter-spacing: 1px;
+    outline: none;
 }
 
 .offerButtonDiv a {
@@ -236,7 +253,8 @@ of containers and arranged using flex. */
     color: #292C33;
     position: relative;
     display: block;
-    min-height: 300px;
+    min-height: 400px;
+    top: -4px;
 }
 
 .plansHeader {
@@ -295,7 +313,7 @@ for all of the plan containers. */
     border-right: none;
     text-align: center;
     display: flex;
-    background-color: #F7F8FA;
+    background-color: #FFFFFF;
     padding: 0;
     top: 0;
     box-sizing: border-box;
@@ -326,6 +344,7 @@ for all of the plan containers. */
     border-top: none;
     height: 215px;
     border-bottom: 1px solid #EDEFF2;
+    background-color: #F7F8FA;
     box-sizing: border-box;
     -webkit-box-flex: 0;
     flex-grow: 0;
@@ -382,6 +401,11 @@ for all of the plan containers. */
     line-height: 13px;
     text-transform: uppercase;
     margin: auto;
+}
+
+.plansColumn2 button:hover {
+    background-color: #303030;
+
 }
 
 .plansColumn2 button {
